--- a/arxiv/2020_06_arxiv.html
+++ b/arxiv/2020_06_arxiv.html
@@ -314,7 +314,55 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.11883">https://arxiv.org/abs/2006.11883</a></span> Majorana orthogonal transformation and Majorana zero modes in free fermionic systems **</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.09546">https://arxiv.org/abs/2006.09546</a></span> Instructive Review of Novel SFT with Non-interacting consituents “objects”, and attempt Generalization to p-adic theory (Holger Bech Nielsen, Masao Ninomiya)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.11329">https://arxiv.org/abs/2006.11329</a></span> Quantum and classical approaches in statistical physics: game theoretic interpretation</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.03683">https://arxiv.org/abs/2006.03683</a></span> SIGN PROBLEMS IN QUANTUM FIELD THEORY: CLASSICAL AND QUANTUM APPROACHES</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.03683">https://arxiv.org/abs/2006.03683</a></span> SIGN PROBLEMS IN QUANTUM FIELD THEORY: CLASSICAL AND QUANTUM APPROACHES</p><br>
+<p class="p1">20200624</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.12502">https://arxiv.org/abs/2006.12502</a></span> Six-fold Excitations in Electrides *** (Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.12905">https://arxiv.org/abs/2006.12905</a></span> An Introduction to Spin Wave Computing **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.12808">https://arxiv.org/abs/2006.12808</a></span> RG and logarithmic CFT multicritical properties of randomly diluted Ising models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.12998">https://arxiv.org/abs/2006.12998</a></span> Comment on “Inconsistency of the conventional theory of super- conductivity” by J. E. Hirsch **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13061">https://arxiv.org/abs/2006.13061</a></span> Asymptotic low-temperature behavior of two-dimensional RPN−1 models ** (Ettore Vicari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.12532">https://arxiv.org/abs/2006.12532</a></span> Higher-form symmetries and 3-group in axion electrodynamics ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13149">https://arxiv.org/abs/2006.13149</a></span> Near Conformal Perturbation Theory in SYK Type Models *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13143">https://arxiv.org/abs/2006.13143</a></span> Gaussian Continuous Tensor Network States for Simple Bosonic Field Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.12956">https://arxiv.org/abs/2006.12956</a></span> Experimental Observation of High-Energy <i>E</i>8 Particles in the Ising Chain Ferromagnet CoNb2O6 *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.08936">https://arxiv.org/abs/1909.08936</a></span> On thermal Nieh-Yan anomaly in Weyl superfluids *** (G.E. Volovik)</p>
+<p class="p2"><a href="https://arxiv.org/abs/2006.12525">https://arxiv.org/abs/2006.12525</a><span class="s2"> Webs of integrable theories</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13040">https://arxiv.org/abs/2006.13040</a></span> Rate of convergence towards mean-field evolution for weakly interacting bosons with singular three-body interactions ** (Jinyeop Lee)</p>
+<p class="p3"><br></p>
+<p class="p1">20200625</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13819">https://arxiv.org/abs/2006.13819</a></span> Inverted pendulum driven by a horizontal random force: statistics of the never-falling trajectory and supersymmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13244">https://arxiv.org/abs/2006.13244</a></span> Weak-measurement-induced asymmetric dephasing: a topological transition (Yuval Gefen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13672">https://arxiv.org/abs/2006.13672</a></span> Thermal Properties of Superconductors **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13553">https://arxiv.org/abs/2006.13553</a></span> Symmetry-protected topological phases in the SU(N) Heisenberg spin chain: a Majorana-fermion approach *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13755">https://arxiv.org/abs/2006.13755</a></span> Attractive Kane-Mele-Hubbard model at half filling: phase diagram and Cooperon condensation **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13369">https://arxiv.org/abs/2006.13369</a></span> A superconducting praseodymium nickelate with infinite layer structure ** (Hyeok Yoon, Harold Hwang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13239">https://arxiv.org/abs/2006.13239</a></span> Doping-induced quantum spin Hall insulator to superconductor transition ** (Chong Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06355">https://arxiv.org/abs/2005.06355</a></span> Lectures: From quantum mechanics to the Standard Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13280">https://arxiv.org/abs/2006.13280</a></span> Superconformal symmetry and representations</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13414">https://arxiv.org/abs/2006.13414</a></span> Matrix Models and Deformations of JT Gravity ***** (Edward Witten)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13630">https://arxiv.org/abs/2006.13630</a></span> Lectures on the Superconformal Index</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13892">https://arxiv.org/abs/2006.13892</a></span> Lectures on chiral algebras of N&gt;=2 superconformal field theories</p>
+<p class="p3"><br></p>
+<p class="p1">20200626</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13938">https://arxiv.org/abs/2006.13938</a></span> Hofstadter Topology: Non-crystalline Topological Materials in the Moir ́e Era *** (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.14000">https://arxiv.org/abs/2006.14000</a></span> Evidence of Emergent Symmetry and Valley Chern Number in Twisted Double-Bilayer Graphene *** (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.14535">https://arxiv.org/abs/2006.14535</a></span> Perturbed Sachdev-Ye-Kitaev model: a polaron in the hyperbolic plane *** (A. Yu. Kitaev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.14595">https://arxiv.org/abs/2006.14595</a></span> Quantum Hall effective action for anisotropic Dirac semi-metal *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13947">https://arxiv.org/abs/2006.13947</a></span> Anomalous density fluctuations in a random t-J model *** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13946">https://arxiv.org/abs/2006.13946</a></span> Classification of topological phase transitions and van-Hove singularity steering mechanism in graphene superlattices **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13983">https://arxiv.org/abs/2006.13983</a></span> Complex Sachdev-Ye-Kitaev model in the double scaling limit</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.14620">https://arxiv.org/abs/2006.14620</a></span> Holographic baby universes: an observable story (Monica Jinwoo Kang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.13996">https://arxiv.org/abs/2006.13996</a></span> SYMMETRIES AND THEIR BREAKING IN THE FUNDAMENTAL LAWS OF PHYSICS</p>
+<p class="p3"><br></p>
+<p class="p1">20200629</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.15093">https://arxiv.org/abs/2006.15093</a></span> Proposal to measure out-of-time-ordered correlations using Bell states</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.14931">https://arxiv.org/abs/2006.14931</a></span> An operator-theoretical study of the specific heat and the critical magnetic field in the BCS-Bogoliubov model of superconductivity ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.14729">https://arxiv.org/abs/2006.14729</a></span> Competing orders at higher-order Van Hove points ***** (Andrey V. Chubukov, Michael M. Scherer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.14876">https://arxiv.org/abs/2006.14876</a></span> Superconductivity from buckled-honeycomb-vacancy ordering</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.14797">https://arxiv.org/abs/2006.14797</a></span> MASS GAP IN U(1) HIGGS-YUKAWA MODEL ON A UNIT LATTICE</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1907.01501">https://arxiv.org/abs/1907.01501</a></span> Fermion-fermion duality in 3+1 dimensions ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.14741">https://arxiv.org/abs/2006.14741</a></span> Getting to the Bottom of Noether’s Theorem</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10072">https://arxiv.org/abs/2006.10072</a></span> Periodically, Quasi-periodically, and Randomly Driven Conformal Field Theories: Part I ***** (Ashvin Vishwanath)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
