--- a/arxiv/2020_06_arxiv.html
+++ b/arxiv/2020_06_arxiv.html
@@ -362,7 +362,19 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.14797">https://arxiv.org/abs/2006.14797</a></span> MASS GAP IN U(1) HIGGS-YUKAWA MODEL ON A UNIT LATTICE</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1907.01501">https://arxiv.org/abs/1907.01501</a></span> Fermion-fermion duality in 3+1 dimensions ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.14741">https://arxiv.org/abs/2006.14741</a></span> Getting to the Bottom of Noether’s Theorem</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10072">https://arxiv.org/abs/2006.10072</a></span> Periodically, Quasi-periodically, and Randomly Driven Conformal Field Theories: Part I ***** (Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.10072">https://arxiv.org/abs/2006.10072</a></span> Periodically, Quasi-periodically, and Randomly Driven Conformal Field Theories: Part I ***** (Ashvin Vishwanath)</p><br>
+<p class="p1">20200630</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.15848">https://arxiv.org/abs/2006.15848</a></span> Indications for Topological Physics in High-Tc Materials **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.15152">https://arxiv.org/abs/2006.15152</a></span> An exponential ramp in the quadratic Sachdev-Ye-Kitaev model ***** (Shao-Kai Jian, Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.15814">https://arxiv.org/abs/2006.15814</a></span> Construction of a series of topologically distinct ν = 2/5 fractional quantum Hall wave functions by conformal field theory (Kun Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.15898">https://arxiv.org/abs/2006.15898</a></span> Machine Learning Identification of Impurities in the STM Images ** (Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.16168">https://arxiv.org/abs/2006.16168</a></span> Approaching off-diagonal long-range order for 1+1-dimensional relativistic anyons **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.15451">https://arxiv.org/abs/2006.15451</a></span> FeynOnium: Using FeynCalc for automatic calculations in Nonrelativistic Effective Field Theories **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.15928">https://arxiv.org/abs/2006.15928</a></span> Distinct pairing symmetries of superconductivity in infinite-layer nickelates<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.15305">https://arxiv.org/abs/2006.15305</a></span> Hund’s metal physics: from SrNiO2 to NdNiO2<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.15567">https://arxiv.org/abs/2006.15567</a></span> Geometry and topology in many-body physics ***** (Raffaele Resta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.15775">https://arxiv.org/abs/2006.15775</a></span> Odd–Parity Spin–Triplet Superconductivity in Centrosymmetric Antiferromagnetic Metals ***** (Seung Hun Lee, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1907.08204">https://arxiv.org/abs/1907.08204</a></span> Topological theory of Lieb-Schultz-Mattis theorems in quantum spin systems ***** (Dominic V. Else)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
