--- a/arxiv/2020_07_arxiv.html
+++ b/arxiv/2020_07_arxiv.html
@@ -155,7 +155,13 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.01224">https://arxiv.org/abs/2007.01224</a></span> Thermal Field Theory in real-time formalism: concepts and applications for particle decays ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.16821">https://arxiv.org/abs/2006.16821</a></span> Dimensionless physics ** (G.E. Volovik)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.07209">https://arxiv.org/abs/2005.07209</a></span> Cardy’s Conjecture and the Spectrum of Infrared Strongly-Coupled Quantum Field Theories</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.00832">https://arxiv.org/abs/2007.00832</a></span> Why Aren’t More Theories Named After Women?: Teaching Women’s History in Physics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.00832">https://arxiv.org/abs/2007.00832</a></span> Why Aren’t More Theories Named After Women?: Teaching Women’s History in Physics</p><br>
+<p class="p1">20200706</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.01303">https://arxiv.org/abs/2007.01303</a></span> Conformal field theories are magical ***** (Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.01333">https://arxiv.org/abs/2007.01333</a></span> A Renormalization Group Approach to Spontaneous Stochasticity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.01532">https://arxiv.org/abs/2007.01532</a></span> M-theoretic Genesis of Topological Phases ***** (Gil Young Cho)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.01677">https://arxiv.org/abs/2007.01677</a></span> Susy for non-Hermitian Hamiltonians, with a view to coherent states</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.12203">https://arxiv.org/abs/2002.12203</a></span> Dynamic Logic of Quantum Field Theory</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
