--- a/arxiv/2020_07_arxiv.html
+++ b/arxiv/2020_07_arxiv.html
@@ -161,7 +161,54 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.01333">https://arxiv.org/abs/2007.01333</a></span> A Renormalization Group Approach to Spontaneous Stochasticity</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.01532">https://arxiv.org/abs/2007.01532</a></span> M-theoretic Genesis of Topological Phases ***** (Gil Young Cho)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.01677">https://arxiv.org/abs/2007.01677</a></span> Susy for non-Hermitian Hamiltonians, with a view to coherent states</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.12203">https://arxiv.org/abs/2002.12203</a></span> Dynamic Logic of Quantum Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.12203">https://arxiv.org/abs/2002.12203</a></span> Dynamic Logic of Quantum Field Theory</p><br>
+<p class="p1">20200707</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.02468">https://arxiv.org/abs/2007.02468</a></span> Non-Hermitian generalizations of extended Su-Schrieffer-Heeger models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.02046">https://arxiv.org/abs/2007.02046</a></span> Impurities in 3D quadratic band-touching Luttinger semimetals : Friedel and RKKY oscillations ***** (W. Witczak-Krempa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.01912">https://arxiv.org/abs/2007.01912</a></span> Flag manifold sigma models from SU(<i>n</i>) chains *** (Ian Affleck)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.02878">https://arxiv.org/abs/2007.02878</a></span> Quantum phase transitions in a spin-1 antiferromagnetic chain with long-range interactions and modulated single-ion anisotropy</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/0911.0334">https://arxiv.org/abs/0911.0334</a></span> Classical Physics: Spacetime and Fields</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.02251">https://arxiv.org/abs/2007.02251</a></span> Ph.D. in physics as a hurdle race, and the “glass hurdles” for women</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.13880">https://arxiv.org/abs/1909.13880</a></span> Vortex end Majorana zero modes in superconducting Dirac and Weyl semimetals ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.08646">https://arxiv.org/abs/1909.08646</a></span> The operator L ́evy flight: light cones in chaotic long-range interacting systems *** (Brian Swingle)</p>
+<p class="p2"><br></p>
+<p class="p1">20200708</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.02944">https://arxiv.org/abs/2007.02944</a></span> Fermionic dualities with axial gauge fields ******</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.02956">https://arxiv.org/abs/2007.02956</a></span> Higher-order Weyl Semimetals ***** (Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.03033">https://arxiv.org/abs/2007.03033</a></span> Renormalization of Galilean Electrodynamics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.02950">https://arxiv.org/abs/2007.02950</a></span> Anomalous thermalization and spin subdiffusion in disordered SU(2)-symmetric Floquet systems **** (Meng Cheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.03551">https://arxiv.org/abs/2007.03551</a></span> Unveiling operator growth in SYK quench dynamics ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.02957">https://arxiv.org/abs/2007.02957</a></span> Emergent pairing channel in strong density waves ****</p>
+<p class="p2"><br></p>
+<p class="p1">20200709</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.03738">https://arxiv.org/abs/2007.03738</a></span> Skin effect and winding number in disordered non-Hermitian systems *** (Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.04076">https://arxiv.org/abs/2007.04076</a></span> Flat-band ferromagnetism in twisted bilayer graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.03810">https://arxiv.org/abs/2007.03810</a></span> Strongly Correlated Chern Insulators in Magic-Angle Twisted Bilayer Graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.03374">https://arxiv.org/abs/2007.03374</a></span> Spectral functions and dynamic critical behavior of relativistic Z2 theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.03740">https://arxiv.org/abs/2007.03740</a></span> Infrared fixed points of higher-spin fermions in topological semimetals ***** (Igor Boettcher)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.03717">https://arxiv.org/abs/2007.03717</a></span> Heisenberg-Kitaev model in a magnetic field: 1/S expansion *** (Lukas Janssen, Matthias Vojta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.03880">https://arxiv.org/abs/2007.03880</a></span> Strongly coupled QFT dynamics via TQFT coupling</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.03784">https://arxiv.org/abs/2007.03784</a></span> Three dimensional Yukawa models and CFTs at strong and weak couplings</p>
+<p class="p2"><br></p>
+<p class="p1">20200710</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.04339">https://arxiv.org/abs/2007.04339</a></span> Susceptibility anisotropy and its disorder evolution in models for Kitaev materials *** (Lukas Janssen, Matthias Vojta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10826">https://arxiv.org/abs/2005.10826</a></span> An Effective Field Theory for Fractional Quantum Hall Systems near ν = 5/2 ***** (Juven Wang)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2007.04329">https://arxiv.org/abs/2007.04329</a><span class="s2"> Exceptional Spin Liquids *****</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.04332">https://arxiv.org/abs/2007.04332</a></span> Partial flux ordering and thermal Majorana metals in (higher-order) spin liquids *** (Simon Trebst)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.04603">https://arxiv.org/abs/2007.04603</a></span> Long-range multi-scalar models at three loops</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.04373">https://arxiv.org/abs/2007.04373</a></span> Theory of (s + id) pairing in mixed-valent correlated metals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.04904">https://arxiv.org/abs/2007.04904</a></span> More Exotic Field Theories in 3+1 Dimensions ***** (Nathan Seiberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.04913">https://arxiv.org/abs/2007.04913</a></span> Fermi Surface Resonance and Quantum Criticality in Strongly Interacting Fermi Gases ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.04335">https://arxiv.org/abs/2007.04335</a></span> A Path (Integral) to Scale Invariance</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12695">https://arxiv.org/abs/2005.12695</a></span> Quantization of gauged Floreanini-Jackiw chiral boson with Faddeevian anomaly</p>
+<p class="p2"><br></p>
+<p class="p1">20200713</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.05475">https://arxiv.org/abs/2007.05475</a></span> Dirac-Harper Theory for One Dimensional Moir Superlattices ** (E. J. Mele)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2007.05525">https://arxiv.org/abs/2007.05525</a><span class="s2"> Fermi Surface Geometry</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.05118">https://arxiv.org/abs/2007.05118</a></span> Insulator-pseudogap crossover in the Lieb lattice **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.05152">https://arxiv.org/abs/2007.05152</a></span> Symmetry-protected Spinful Magnetic Weyl Nodal Loops and Multi-Weyl Nodes in 5dn (n = 1, 2) Cubic Double Perovskites</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.05002">https://arxiv.org/abs/2007.05002</a></span> Note on Generalized Symmetries, Gapless Excitations, Generalized Symmetry Protected Topological states, and Anomaly ***** (Chao-Ming Jian, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.10758">https://arxiv.org/abs/2004.10758</a></span> Berry Phase in Quantum Field Theory: Diabolical Points and Boundary Phenomena</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
