--- a/arxiv/2020_07_arxiv.html
+++ b/arxiv/2020_07_arxiv.html
@@ -208,7 +208,41 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.05118">https://arxiv.org/abs/2007.05118</a></span> Insulator-pseudogap crossover in the Lieb lattice **</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.05152">https://arxiv.org/abs/2007.05152</a></span> Symmetry-protected Spinful Magnetic Weyl Nodal Loops and Multi-Weyl Nodes in 5dn (n = 1, 2) Cubic Double Perovskites</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.05002">https://arxiv.org/abs/2007.05002</a></span> Note on Generalized Symmetries, Gapless Excitations, Generalized Symmetry Protected Topological states, and Anomaly ***** (Chao-Ming Jian, Cenke Xu)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.10758">https://arxiv.org/abs/2004.10758</a></span> Berry Phase in Quantum Field Theory: Diabolical Points and Boundary Phenomena</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.10758">https://arxiv.org/abs/2004.10758</a></span> Berry Phase in Quantum Field Theory: Diabolical Points and Boundary Phenomena</p><br>
+<p class="p1">20200714</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.06086">https://arxiv.org/abs/2007.06086</a></span> Fragile Insulator and Electronic Nematicity in a Graphene Moire ́ System</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.05915">https://arxiv.org/abs/2007.05915</a></span> Discrete Theta Angles, Symmetries and Anomalies *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.05539">https://arxiv.org/abs/2007.05539</a></span> Higher-form Gauge Symmetries in Multipole Topological Phases *** (Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.05543">https://arxiv.org/abs/2007.05543</a></span> Doped Orthogonal Metals Become Fermi Arcs *** (Yang Qi, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.05931">https://arxiv.org/abs/2007.05931</a></span> Channel-selective non-Fermi liquid behavior in the two-channel Kondo lattice model under a magnetic field (Yukitoshi Motome)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.06121">https://arxiv.org/abs/2007.06121</a></span> Reply to Comment on “Chaotic-Integrable Transition in the Sachdev-Ye-Kitaev Model”</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.06302">https://arxiv.org/abs/2007.06302</a></span> Honeycomb-Lattice Mott insulator on Tantalum Disulphide *** (Ara Go, Sang-Wook Cheong, Hae-Young Kee, Han Woong Yeom)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.06323">https://arxiv.org/abs/2007.06323</a></span> First-principle simulations of 1+1d quantum field theories at θ = π and spin-chains</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.05988">https://arxiv.org/abs/2007.05988</a></span> Pair production: de Sitter vs Schwinger</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.10188">https://arxiv.org/abs/2002.10188</a></span> Perturbative Thermal QCD: Formalism and Applications</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.06239">https://arxiv.org/abs/2007.06239</a></span> A LATTICE VERSION OF THE ATIYAH-SINGER INDEX THEOREM ***</p>
+<p class="p2"><br></p>
+<p class="p1">20200715</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.06588">https://arxiv.org/abs/2007.06588</a></span> A Floquet perturbation theory for periodically driven weakly-interacting fermions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01231">https://arxiv.org/abs/2005.01231</a></span> TOWARDS FIELD THEORY OF TURBULENCE</p>
+<p class="p2"><br></p>
+<p class="p1">20200716</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.07274">https://arxiv.org/abs/2007.07274</a></span> Non-linear transport without spin-orbit coupling or warping in two-dimensional Dirac semimetals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.07273">https://arxiv.org/abs/2007.07273</a></span> Detecting Topological Quantum Phase Transitions via the c-Function *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.07256">https://arxiv.org/abs/2007.07256</a></span> Charge density waves in Weyl semimetals ***** (A.A. Burkov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.07259">https://arxiv.org/abs/2007.07259</a></span> The Heart of Entanglement: Chiral, Nematic, and Incommensurate Phases in the Kitaev-Gamma Ladder in a Field *** (Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.07509">https://arxiv.org/abs/2007.07509</a></span> Spin wave theory of one-dimensional generalized Kitaev model ***** (Ian Affleck)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1907.09168">https://arxiv.org/abs/1907.09168</a></span> Surface terms in the effective actions via duality constraints ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.07283">https://arxiv.org/abs/2007.07283</a></span> Quantum chaos measures for Floquet dynamics ***</p>
+<p class="p2"><br></p>
+<p class="p1">20200717</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.07909">https://arxiv.org/abs/2007.07909</a></span> Electronic Floquet Liquid Crystals *** (Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.08436">https://arxiv.org/abs/2007.08436</a></span> Bootstrap and Amplitudes: A Hike in the Landscape of Quantum Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.08143">https://arxiv.org/abs/2007.08143</a></span> Determination of Dynamical exponents of Graphene at quantum critical point by holography ***** (Geunho Song, Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.07896">https://arxiv.org/abs/2007.07896</a></span> Non-Fermi liquids as ersatz Fermi liquids: general constraints on compressible metals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.07898">https://arxiv.org/abs/2007.07898</a></span> Observation of non-Fermi liquid physics in a quantum critical metal via quantum loop topography ***** (Simon Trebst, Eun-Ah Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.08212">https://arxiv.org/abs/2007.08212</a></span> Direct observation of excitonic instability in Ta2NiSe5 (BJ Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.08323">https://arxiv.org/abs/2007.08323</a></span> Schwinger effect in a Bardeen-Cooper-Schrieffer superconductor</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
